# mmwavelab-dca1000

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: dca1000_iwr1843.json  iwr1843_best_range_1tx_256s_3983mhz.cfg
docs/: compatibility-2026-04-29.md  ftdi-vcp-block-2026-04-29.md  iwr1843-best-range-profile.md  mmwave-studio-iwr1843-flow.md  serial-and-recording-notes.md
firmware/iwr1843_uniflash_default/: manifest.json
src/mmwavelab_dca1000/: __init__.py  cli.py  compat.py  config.py  dca1000_py.py  radar_cli.py  radar_config.py  rstd.py  serial_diag.py  studio_lua.py  ti_cli.py
tests/: test_config.py  test_dca1000_py.py  test_radar_cli.py  test_radar_config.py  test_rstd.py  test_serial_diag.py  test_studio_lua.py  test_ti_cli.py
